--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jimmysawczuk.com",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
   "author": "Jimmy Sawczuk <me@jimmysawczuk.com>",
@@ -17,5 +17,6 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "2.2.0-rc.3"
-  }
+  },
+  "private": true
 }
