--- a/.htaccess
+++ b/.htaccess
@@ -118,7 +118,7 @@ Redirect 301 /2008/05/here-i-dreamt-i-was-an-architect.html https://section411.c
 # Customize what Apache returns to the client in case of an error.
 # https://httpd.apache.org/docs/current/mod/core.html#errordocument
 
-ErrorDocument 404 /404.php
+# ErrorDocument 404 /404.php
 
 # ----------------------------------------------------------------------
 # | Error prevention                                                   |
