--- a/.htaccess
+++ b/.htaccess
@@ -14,11 +14,13 @@ Redirect 301 /2015/02/ten-days-in-bhutan.html https://section411.com/2015/02/ten
 Redirect 301 /2015/01/if-it-bleeds-it-leads.html https://section411.com/2015/01/if-it-bleeds-it-leads/
 Redirect 301 /2014/11/a-life-fully-lived.html https://section411.com/2014/11/a-life-fully-lived/
 Redirect 301 /2014/08/the-mecca-of-cheesesteaks.html https://section411.com/2014/08/the-mecca-of-cheesesteaks/
+Redirect 301 /2014/03/something-to-build-on.html https://section411.com/2014/03/something-to-build-on/
 Redirect 301 /2014/03/we.html https://section411.com/2014/03/we/
 Redirect 301 /2013/12/beautiful-dont-you-think.html https://section411.com/2013/12/beautiful-dont-you-think/
 Redirect 301 /2013/08/wait-theres-a-waffle-house-here.html https://section411.com/2013/08/wait-theres-a-waffle-house-here/
 Redirect 301 /2013/07/a-problem-of-scope.html https://section411.com/2013/07/a-problem-of-scope/
 Redirect 301 /2013/04/like-a-carpenter-who-makes-stairs.html https://section411.com/2013/04/like-a-carpenter-who-makes-stairs/
+Redirect 301 /2013/03/some-skin-in-the-game.html https://section411.com/2013/03/some-skin-in-the-game/
 Redirect 301 /2013/01/the-great-emancipator.html https://section411.com/2013/01/the-great-emancipator/
 Redirect 301 /2012/05/two-outs-away.html https://section411.com/2012/05/two-outs-away/
 Redirect 301 /2012/05/northern-exposure.html https://section411.com/2012/05/northern-exposure/
