--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "license": "MIT",
   "dependencies": {
     "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
-    "font-awesome-webpack2": "^0.0.6",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "normalize.css": "^5.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.0-rc.3"
+    "webpack": "^2.6.1"
   },
   "private": true
 }
