Redirect for halfway

--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,7 @@ Redirect 301 /2015/02/ten-days-in-bhutan.html https://section411.com/2015/02/ten
 Redirect 301 /2015/01/if-it-bleeds-it-leads.html https://section411.com/2015/01/if-it-bleeds-it-leads/
 Redirect 301 /2014/11/a-life-fully-lived.html https://section411.com/2014/11/a-life-fully-lived/
 Redirect 301 /2014/08/the-mecca-of-cheesesteaks.html https://section411.com/2014/08/the-mecca-of-cheesesteaks/
+Redirect 301 /2014/07/halfway.html https://section411.com/2014/07/halfway/
 Redirect 301 /2014/03/we.html https://section411.com/2014/03/we/
 Redirect 301 /2014/03/something-to-build-on.html https://section411.com/2014/03/something-to-build-on/
 Redirect 301 /2013/12/beautiful-dont-you-think.html https://section411.com/2013/12/beautiful-dont-you-think/
