redirect rule for thome post

--- a/.htaccess
+++ b/.htaccess
@@ -29,6 +29,7 @@ Redirect 301 /2012/05/northern-exposure.html https://section411.com/2012/05/nort
 Redirect 301 /2012/05/in-defense-of-chris-perez.html https://section411.com/2012/05/in-defense-of-chris-perez/
 Redirect 301 /2012/02/living-the-dream.html https://section411.com/2012/02/living-the-dream/
 Redirect 301 /2011/09/baseball-in-the-twin-cities.html https://section411.com/2011/09/baseball-in-the-twin-cities/
+Redirect 301 /2011/08/clear-eyes-full-hearts-cant-lose.html https://section411.com/2011/08/the-600-club/
 Redirect 301 /2011/07/oer-the-land-of-the-free.html https://section411.com/2011/07/oer-the-land-of-the-free/
 Redirect 301 /2010/06/the-best-ballpark-in-america.html https://section411.com/2010/06/the-best-ballpark-in-america/
 Redirect 301 /2009/05/the-park-that-started-it-all.html https://section411.com/2009/05/the-park-that-started-it-all/
