--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "jimmysawczuk.com",
   "version": "1.0.0",
-  "description": "",
   "main": "webpack.config.js",
   "author": "Jimmy Sawczuk <me@jimmysawczuk.com>",
   "license": "MIT",
   "dependencies": {
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.9.0",
-    "font-awesome": "^4.7.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "normalize.css": "^5.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.6.1"
+    "normalize.css": "^7.0.0",
+    "raw-loader": "^0.5.1",
+    "sizzle": "^2.3.3",
+    "style-loader": "^0.19.0",
+    "uglify-es": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
+    "webpack": "^3.0"
   },
   "private": true
 }
