--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "jimmysawczuk.com",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
+  "version": "2.0.0",
   "author": "Jimmy Sawczuk <me@jimmysawczuk.com>",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0",
     "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "normalize.css": "^7.0.0",
-    "raw-loader": "^0.5.1",
-    "sizzle": "^2.3.3",
-    "style-loader": "^0.19.0",
-    "uglify-es": "^3.1.3",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-    "webpack": "^3.0"
+    "parcel-bundler": "^1.7.0",
+    "sizzle": "^2.3.3"
   },
   "private": true
 }
