--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "watch": "parcel watch -d public/dist src/*.js",
-    "build": "parcel build -d public/dist src/*.js",
+    "build": "parcel build --experimental-scope-hoisting -d public/dist src/*.js",
     "minify-html": "html-minifier -o public/index.html public/index.html && html-minifier -o public/resume/index.html public/resume/index.html",
     "prettier": "prettier --write src/*.js *.json less/*"
   },
