--- a/package.json
+++ b/package.json
@@ -5,23 +5,34 @@
   "license": "MIT",
   "scripts": {
     "tmpl": "tmpl -o public/index.html -fmt html -min tmpl/index.tmpl && tmpl -o public/resume/index.html -fmt html -min tmpl/resume.tmpl",
-    "watch": "parcel watch -d public/dist src/*.js",
-    "build": "parcel build --experimental-scope-hoisting -d public/dist src/*.js",
+    "dev": "webpack -w --mode=development",
+    "build": "webpack --mode=production",
+    "watch-old": "parcel watch -d public/dist src/*.js",
+    "build-old": "parcel build --experimental-scope-hoisting -d public/dist src/*.js",
     "minify-html": "html-minifier -o public/index.html public/index.html && html-minifier -o public/resume/index.html public/resume/index.html",
     "prettier": "prettier --write src/*.js *.json less/*"
   },
   "private": true,
   "devDependencies": {
-    "@fortawesome/fontawesome-pro": "^5.12",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12",
-    "@fortawesome/pro-duotone-svg-icons": "^5.12",
-    "@fortawesome/pro-light-svg-icons": "^5.12",
-    "autoprefixer": "^9.6",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/preset-env": "^7.9.5",
+    "@fortawesome/fontawesome-pro": "^5.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13",
+    "@fortawesome/pro-duotone-svg-icons": "^5.13",
+    "@fortawesome/pro-light-svg-icons": "^5.13",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "html-minifier": "^4.0.0",
     "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0",
-    "parcel-bundler": "^1.12",
-    "prettier": "^2.0.2"
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prettier": "^2.0.4",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
