--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13",
     "@fortawesome/pro-duotone-svg-icons": "^5.13",
     "@fortawesome/pro-light-svg-icons": "^5.13",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
     "html-minifier": "^4.0.0",
@@ -30,6 +31,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
     "prettier": "^2.0.4",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.1",
