--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
+    "file-loader": "^6.0.0",
     "html-minifier": "^4.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
