--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack -w --mode=development",
     "build": "webpack --mode=production",
     "minify-html": "html-minifier -o public/index.html public/index.html && html-minifier -o public/resume/index.html public/resume/index.html",
-    "prettier": "prettier --write src/*.js *.json less/*"
+    "prettier": "prettier --write src/*.js *.json scss/*"
   },
   "private": true,
   "devDependencies": {
@@ -25,13 +25,13 @@
     "css-loader": "^3.5.2",
     "file-loader": "^6.0.0",
     "html-minifier": "^4.0.0",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.4",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
