--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "@fortawesome/pro-light-svg-icons": "^5.14.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.2",
+    "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
     "html-minifier": "^4.0.0",
-    "mini-css-extract-plugin": "^0.11.0",
+    "mini-css-extract-plugin": "^0.11.1",
     "normalize.css": "^8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^7.0.32",
+    "postcss-loader": "^4.0.1",
     "prettier": "^2.1.1",
-    "sass-loader": "^10.0.2",
     "sass": "^1.26.10",
-    "terser-webpack-plugin": "^4.1.0",
-    "webpack-cli": "^3.3.12",
-    "webpack": "^4.44.1"
+    "sass-loader": "^10.0.2",
+    "terser-webpack-plugin": "^4.2.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
