--- a/package.json
+++ b/package.json
@@ -11,30 +11,26 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
-    "@fortawesome/fontawesome-pro": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/pro-duotone-svg-icons": "^5.15.1",
-    "@fortawesome/pro-light-svg-icons": "^5.15.1",
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "autoprefixer": "^10.0.2",
-    "babel-loader": "^8.2.1",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
+    "autoprefixer": "^10.2.1",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "file-loader": "^6.2.0",
     "html-minifier": "^4.0.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.4",
     "normalize.css": "^8.0.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^8.1.10",
+    "postcss": "^8.2.4",
     "postcss-loader": "^4.1.0",
-    "prettier": "^2.2.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "prettier": "^2.2.1",
+    "purgecss": "^3.1.3",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
   }
 }
