--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
@@ -27,10 +26,11 @@
     "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
     "purgecss": "^4.0.3",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "tailwindcss": "^2.2.4"
   }
 }
