--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "autoprefixer": "^10.2.5",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
-    "css-minimizer-webpack-plugin": "^3.0.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "html-minifier": "^4.0.0",
-    "mini-css-extract-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "^2.0.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.3.0",
-    "postcss-loader": "^5.3.0",
-    "prettier": "^2.3.0",
+    "postcss": "^8.3.5",
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.3.2",
     "purgecss": "^4.0.3",
-    "sass": "^1.34.0",
-    "sass-loader": "^11.1.1",
-    "terser-webpack-plugin": "^5.1.2",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0"
+    "terser-webpack-plugin": "^5.1.4",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "tailwindcss": "^2.2.4"
   }
 }
